--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <title>jenkins ci/cd pipeline</title>
 <body>
 <h1>Welcome to my Vivek kadu Cycling World</h1>
+<h2>Pune to Goa Cycle Ride</h2>
 </body>
 </html>
