changing the content

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Welcome to my Vivek kadu Cycling World</h1>
 <h2>Pune to Goa Cycle Ride</h2>
+<h3>Pune - Kolhapur-Nipani-Sawantwadi-Goa</h3>
 </body>
 </html>
