--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Welcome to my Vivek kadu Cycling World</h1>
 <h2>Pune to Goa Cycle Ride</h2>
 <h3>Pune - Kolhapur-Nipani-Sawantwadi-Goa</h3>
-<h1>CI CD pipeline done on stagin</h1>
+<h1>CI CD pipeline done on Prodn</h1>
 <h1>first pipeline</h1>
 </body>
 </html>
