--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <h3>Pune - Kolhapur-Nipani-Sawantwadi-Goa</h3>
 <h1>CI CD pipeline done on Prodn</h1>
 <h1>first pipeline</h1>
+<h1>update in Pipeline</h1>
+<h1>INDO ATHELETIC SOCIETY</h1>
 </body>
 </html>
