--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <h1>first pipeline</h1>
 <h1>update in Pipeline</h1>
 <h1>INDO ATHELETIC SOCIETY</h1>
+<h1>Anvayee and Manava</h1>
 </body>
 </html>
