--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <h1>update in Pipeline</h1>
 <h1>INDO ATHELETIC SOCIETY</h1>
 <h1>Anvayee and Manava</h1>
+<h1>Next Ride Pune to Kanyakumari Dec-2020</h1>
 </body>
 </html>
