--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h2>Pune to Goa Cycle Ride</h2>
 <h3>Pune - Kolhapur-Nipani-Sawantwadi-Goa</h3>
 <h1>CI CD pipeline done on Prodn</h1>
-<h1>first pipeline</h1>
+<h1>first pipeline1</h1>
 <h1>update in Pipeline</h1>
 <h1>INDO ATHELETIC SOCIETY</h1>
 <h1>Anvayee and Manava</h1>
